--- a/mechano.html
+++ b/mechano.html
@@ -3,5 +3,5 @@
 <head>
 </head>
 <body>
-<a clwitter-timeline" href="https://twitter.com/Clufftwsrc%5Etfw">Tweets by CluffieJ</a> <script asy//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" href="https://twitter.com/CluffieJ?ref_src=twsrc%5Etfw">Tweets by CluffieJ</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
