--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <head>
 </head>
 <body>
-<a class="twitter-timeline" href="https://twitter.com/ViolaVogler">Tweets by ViolaVogler</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-width="400" data-height="600" href="https://twitter.com/ViolaVogler?ref_src=twsrc%5Etfw">Tweets by ViolaVogler</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
